# Multilingual_Chatbot_for_Sri_Lanka_Tourism

./: .gitignore  BACKEND_OVERVIEW.md  CHANGELOG.md  COVERAGE_IMPROVEMENT_PLAN.md  ENDPOINT_INTEGRATION_SUMMARY.md  FRONTEND_OVERVIEW.md  PROJECT_OVERVIEW.md  README.md  audit_endpoints.py  check_api_keys.py  coverage.json  coverage.xml  database_images_report.html  database_validation_report.json  docker-compose.yml  emergency_services_sri_lanka.json  env.example  full_test_results.txt  openapi.json  postman_collection.json  pyproject.toml  requirements-minimal.txt  requirements.txt  run.py  sample_tourism_data.json  setup.cfg  test_api_keys.py  test_mongo.py  test_results.txt  test_results_fixed.txt
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  scheduled.yml
backend/: API_DOCUMENTATION.md  ARCHITECTURE.md  CONFIGURATION.md  CREWAI_SETUP.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  DISABLED_FEATURES.md  FEATURE_INTEGRATION_STATUS.md  GRAPHQL.md  MIDDLEWARE.md  MODELS.md  README.md  SECURITY.md  SERVICES.md  TESTING.md  coverage.json
backend/app/: __main__.py  main.py
backend/app/core/: auth.py  cache_decorator.py  celery_app.py  circuit_breaker.py  config.py  database.py  database_indexes.py  db_retry.py  logging_config.py  metrics.py  migrations.py  sanitize.py  secrets.py  sentry_config.py  startup_validation.py  structured_logging.py  tracing.py
backend/app/graphql/: __init__.py  context.py  resolvers.py  schema.py  types.py
backend/app/middleware/: __init__.py  api_versioning.py  cache_headers.py  cors_middleware.py  distributed_rate_limit.py  error_handler.py  rate_limit.py  request_id.py  request_timeout.py  security_headers.py  websocket_security.py
backend/app/models/: __init__.py  analytics.py  attraction.py  challenge.py  conversation.py  emergency.py  event.py  feedback.py  forum.py  hotel.py  itinerary.py  notification.py  recommendation.py  restaurant.py  safety.py  security.py  transport.py  user.py
backend/app/services/: attraction_service.py  auth_service.py  cache_service.py  calendar_export_service.py  chat_service.py  crewai_service.py  currency_service.py  email_verification_service.py  gdpr_export_service.py  gemini_service.py  hybrid_chat_service.py  itinerary_service.py  landmark_recognition_service.py  llm_service.py  maps_service.py  mistral_service.py  oauth_service.py  pdf_export_service.py  qwen_service.py  rasa_service.py  recommendation_service.py  safety_service.py  speech_service.py  tavily_search_service.py  translation_service.py  user_service.py  weather_service.py
backend/app/tasks/: __init__.py  data_tasks.py  email_tasks.py  notification_tasks.py
backend/rasa/: config.yml  credentials.yml  domain.yml  endpoints.yml
backend/rasa/actions/: actions.py
backend/rasa/data/: nlu.yml  nlu_comprehensive.yml  rules.yml  stories.yml  stories_comprehensive.yml
backend/tests/: __init__.py  conftest.py  run_all_endpoint_tests.py  run_tests.py  test_attractions.py  test_auth.py  test_health.py  test_hybrid_ai_system.py
backend/tests/api/: test_additional_endpoints.py  test_all_endpoints_comprehensive.py  test_attractions_api.py  test_auth_api.py  test_chat_api.py
backend/tests/integration/: conftest.py  test_database_integration.py  test_itinerary_api.py  test_oauth_api.py
backend/tests/load_tests/: locustfile.py
backend/tests/security_tests/: test_security.py
backend/tests/unit/: test_attraction_service.py  test_auth_service.py  test_cache_service.py  test_chat_service.py  test_currency_service.py  test_gdpr_service.py  test_itinerary_service.py  test_oauth_service.py  test_user_service.py  test_weather_service.py  test_websocket_security.py
docker/backend/: Dockerfile  Dockerfile.production
docker/mongodb/: init-mongo.js  mongod.conf
docker/prometheus/: alert_rules.yml  alert_rules_comprehensive.yml
docker/rasa/: Dockerfile
docker/rasa-actions/: Dockerfile
frontend/: Dockerfile  ENV_SETUP.md  README.md  TESTING_GUIDE.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/challenges/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/currency/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/explore/: page.tsx
frontend/app/forum/: page.tsx
frontend/app/health/: route.ts
frontend/app/planner/: page.tsx
frontend/app/recommendations/: page.tsx
frontend/app/safety/: page.tsx
frontend/app/weather/: page.tsx
frontend/components/: analytics.tsx  providers.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/hooks/: use-toast.tsx  use-websocket.ts  useAuth.ts  useChat.ts  useDebounce.ts  useGeolocation.ts  useIntersectionObserver.ts  useLanguage.ts  useLocalStorage.ts  useMediaQuery.ts  useOnClickOutside.ts  useTheme.ts
frontend/lib/: analytics.ts  api-client.ts  error-tracking.ts  i18n.ts  image-utils.ts  lazy-load.tsx  theme-config.ts  utils.ts
frontend/store/: auth-store.ts  bookmark-store.ts  chat-store.ts  language-store.ts  notification-store.ts  theme-store.ts  trip-store.ts
frontend/types/: index.ts
kubernetes/: README.md  backend-deployment.yaml  backup-cronjob.yaml  configmap.yaml  hpa.yaml  ingress.yaml  mongodb-statefulset.yaml  namespace.yaml  network-policy.yaml  pod-security-policy.yaml  redis-deployment.yaml  secrets.yaml  storage-class.yaml
monitoring/: README.md  jaeger-deployment.yaml
scripts/: automated_backup.sh  backup.sh  check_database_contents.py  check_hotels_restaurants.py  comprehensive_seed_tourism_data.py  dev-setup.sh  export_database_to_json.py  fix_database.py  fix_image_urls.py  fix_website_urls.py  generate_sample_data.py  import_emergency_services.py  import_enhanced_data.py  import_hotels_restaurants.py  import_master_database.py  import_sample_data.py  import_thasl_hotels.py  migrate_image_urls.py  restore.sh  restore_backup.sh  start.sh  stop.sh  thasl_hotels.json  validate_databases.py  verify_test_coverage.py  view_database_images.py
(+81 files in other folders)
