# ==============================================
# Sri Lanka Tourism Chatbot - Python Project Configuration
# ==============================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sri-lanka-tourism-chatbot"
version = "1.0.0"
description = "A comprehensive AI-powered multilingual chatbot for Sri Lanka Tourism"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/your-org/srilanka-tourism-chatbot"
"Bug Tracker" = "https://github.com/your-org/srilanka-tourism-chatbot/issues"
"Documentation" = "https://github.com/your-org/srilanka-tourism-chatbot#readme"

# ==============================================
# Black Formatter Configuration
# ==============================================
[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

# ==============================================
# isort Import Sorting Configuration
# ==============================================
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", "__pycache__", ".venv", "venv", "migrations"]
known_first_party = ["backend"]
known_third_party = ["fastapi", "pydantic", "motor", "beanie", "redis", "celery"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ==============================================
# Pytest Configuration
# ==============================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "unit: marks tests as unit tests",
    "api: API endpoint tests",
    "auth: Authentication tests",
    "additional: Additional feature tests",
    "comprehensive: Comprehensive test suites",
]

# ==============================================
# Coverage Configuration
# ==============================================
[tool.coverage.run]
source = ["backend/app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/conftest.py",
    "*/.venv/*",
    "*/venv/*",
    # Bootstrap and infrastructure files
    "backend/app/__main__.py",
    "backend/app/core/migrations.py",
    "backend/app/core/secrets.py",
    "backend/app/core/metrics.py",
    "backend/app/core/structured_logging.py",
    "backend/app/core/db_retry.py",
    # Export services (will be tested separately)
    "backend/app/services/calendar_export_service.py",
    "backend/app/services/pdf_export_service.py",
    # Task modules (background job infrastructure)
    "backend/app/tasks/data_tasks.py",
    "backend/app/tasks/email_tasks.py",
    "backend/app/tasks/notification_tasks.py",
    # External service integrations (optional features)
    "backend/app/services/speech_service.py",
    "backend/app/services/crewai_service.py",
]

[tool.coverage.report]
fail_under = 55  # Realistic target based on current test coverage
show_missing = true
skip_covered = false
omit = [
    # Same omissions for reporting
    "backend/app/__main__.py",
    "backend/app/core/migrations.py",
    "backend/app/core/secrets.py",
    "backend/app/core/metrics.py",
    "backend/app/core/structured_logging.py",
    "backend/app/core/db_retry.py",
    "backend/app/services/calendar_export_service.py",
    "backend/app/services/pdf_export_service.py",
    "backend/app/tasks/*",
    "backend/app/services/speech_service.py",
    "backend/app/services/crewai_service.py",
]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ==============================================
# MyPy Type Checking Configuration
# ==============================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.app.models.*"
disallow_untyped_defs = false

# ==============================================
# Ruff Linter Configuration (Modern Alternative to Flake8)
# ==============================================
[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "S101",   # use of assert detected (needed in tests)
    "S104",   # possible binding to all interfaces
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

# ==============================================
# Bandit Security Linter Configuration
# ==============================================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B104"]
# B101: assert_used - needed in tests
# B104: hardcoded_bind_all_interfaces - acceptable for containerized apps
