# ==============================================
# Python Project Configuration
# Unified configuration for linting, testing, and code quality
# ==============================================

[metadata]
name = sri-lanka-tourism-chatbot
version = 1.0.0
description = A comprehensive AI-powered multilingual chatbot for Sri Lanka Tourism
author = Sri Lanka Tourism Development Authority
license = MIT

[options]
python_requires = >=3.11

# ==============================================
# Coverage Configuration
# ==============================================
[coverage:run]
source = backend/app
branch = True
omit =
    */tests/*
    */__pycache__/*
    */migrations/*
    */conftest.py
    */.venv/*
    */venv/*
    backend/app/__main__.py
    backend/app/core/migrations.py
    backend/app/core/secrets.py
    backend/app/core/metrics.py
    backend/app/core/structured_logging.py
    backend/app/core/db_retry.py
    backend/app/services/calendar_export_service.py
    backend/app/services/pdf_export_service.py
    backend/app/tasks/data_tasks.py
    backend/app/tasks/email_tasks.py
    backend/app/tasks/notification_tasks.py
    backend/app/services/speech_service.py
    backend/app/services/crewai_service.py

[coverage:report]
fail_under = 55
show_missing = True
skip_covered = False
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    if typing.TYPE_CHECKING:
    @abstractmethod
    @abc.abstractmethod

[coverage:html]
directory = htmlcov
title = Sri Lanka Tourism Chatbot - Coverage Report

[coverage:xml]
output = coverage.xml

# ==============================================
# Flake8 Configuration
# ==============================================
[flake8]
max-line-length = 120
max-complexity = 10
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    build,
    dist,
    migrations,
    .tox,
    .mypy_cache
ignore =
    # Line too long (handled by Black)
    E501,
    # Line break before binary operator (conflicts with Black)
    W503,
    # Missing docstring in public module
    D100,
    # Missing docstring in __init__
    D104
per-file-ignores =
    __init__.py: F401
    tests/*: D103, S101

# ==============================================
# isort Configuration
# ==============================================
[isort]
profile = black
line_length = 120
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip =
    .git,
    __pycache__,
    .venv,
    venv,
    migrations
known_first_party = backend
known_third_party = fastapi,pydantic,motor,beanie,redis

# ==============================================
# MyPy Configuration
# ==============================================
[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
strict_optional = True
disallow_untyped_defs = False
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
follow_imports = silent
show_error_codes = True

[mypy-tests.*]
ignore_errors = True

[mypy-backend.app.models.*]
# Beanie models may have dynamic attributes
disallow_untyped_defs = False

# ==============================================
# Black Configuration (in pyproject.toml format reference)
# ==============================================
# Note: Black uses pyproject.toml, but documenting here for reference
# [tool.black]
# line-length = 120
# target-version = ['py311']
# include = '\.pyi?$'
# exclude = '''
# /(
#     \.git
#   | \.hg
#   | \.mypy_cache
#   | \.tox
#   | \.venv
#   | venv
#   | _build
#   | buck-out
#   | build
#   | dist
#   | migrations
# )/
# '''

# ==============================================
# Bandit Security Configuration
# ==============================================
[bandit]
exclude_dirs = tests,venv,.venv
skips = B101,B104
# B101: assert_used - needed in tests
# B104: hardcoded_bind_all_interfaces - acceptable for containerized apps

# ==============================================
# Tool-specific Pytest Markers
# ==============================================
# Note: Markers defined in pytest.ini, but documenting here for completeness
# @pytest.mark.slow - Tests that take a long time
# @pytest.mark.integration - Integration tests requiring external services
# @pytest.mark.security - Security-focused tests
# @pytest.mark.unit - Unit tests
